--- a/Web/Resources/Pages/Candidate/Seagoing/Common/Details.fr.resx
+++ b/Web/Resources/Pages/Candidate/Seagoing/Common/Details.fr.resx
@@ -294,6 +294,12 @@
   <data name="REGIONS" xml:space="preserve">
     <value>RÉGIONS</value>
   </data>
+  <data name="RoP" xml:space="preserve">
+    <value>TAUX DE RÉMUNÉRATION :</value>
+  </data>
+  <data name="RoPtext" xml:space="preserve">
+    <value>Pour consulter les taux de rémunération pour toutes les classifications énumérées dans l'&lt;abbr title="Outil de compétences professionnelles"&gt;OCP&lt;/abbr&gt;, visitez le site web du &lt;a href="https://www.tbs-sct.gc.ca/pubs_pol/hrpubs/coll_agre/rates-taux-fra.asp"&gt;Secrétariat du Conseil du Trésor du Canada&lt;/a&gt;&amp;nbsp;&lt;span style="color:#000; font-size:14px" class="glyphicon glyphicon-new-window"&gt;&lt;/span&gt;.</value>
+  </data>
   <data name="SAME CERTIFICATION" xml:space="preserve">
     <value>MÊME ATTESTATION</value>
   </data>
